# who-is-it

backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/routes/: challenge.py  guess.py  leaderboard.py  player.py  results.py
backend/app/services/: challenge.py  guess.py  leaderboard.py  player.py
backend/scripts/: generate_challenges.py  seed_people.py  seed_people_static.py  seed_people_wiki.py
backend/tests/: conftest.py  test_challenge_service.py  test_guess_service.py  test_leaderboard.py  test_player_service.py
database/: schema.sql
docs/superpowers/plans/: 2026-03-29-who-is-it-plan.md
docs/superpowers/specs/: 2026-03-29-who-is-it-design.md
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: Countdown.tsx  GuessIndicators.tsx  GuessInput.tsx  GuessList.tsx  Header.tsx  NicknameModal.tsx  PixelImage.tsx  ResultScreen.tsx  ShareButton.tsx
frontend/src/hooks/: useCountdown.ts  useGame.ts  usePlayer.ts
frontend/src/pages/: GamePage.tsx  LeaderboardPage.tsx
frontend/src/styles/: global.css
